--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
     "deploy": "prisma migrate deploy && next build"
   },
   "dependencies": {
+    "@auth/core": "^0.40.0",
     "@auth/prisma-adapter": "^2.10.0",
     "@prisma/client": "^6.15.0",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
@@ -31,7 +35,7 @@
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
-    "next-auth": "^4.24.7",
+    "next-auth": "^5.0.0-beta.29",
     "next-themes": "^0.2.1",
     "postcss": "^8.4.38",
     "react": "19.1.0",
