--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
     "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "globals": "^15.0.0",
     "postcss": "^8",
     "prisma": "^6.15.0",
