--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/xlsx": "^0.0.35",
+    "@typescript-eslint/eslint-plugin": "^8.42.0",
+    "@typescript-eslint/parser": "^8.42.0",
     "autoprefixer": "^10.0.1",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
