--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,29 +1,31 @@
 {
-  "extends": ["next/core-web-vitals", "plugin:react/recommended"],
-  "plugins": ["react"],
+  "extends": [
+    "next/core-web-vitals",
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:react/recommended"
+  ],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaVersion": 2020,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
+  },
+  "plugins": ["@typescript-eslint", "react"],
   "rules": {
-    "react/display-name": "off",
     "react/react-in-jsx-scope": "off",
-    "react/prop-types": "off"
+    "react/prop-types": "off",
+    "react/display-name": "warn",
+    "@typescript-eslint/no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }]
   },
   "settings": {
     "react": {
       "version": "detect"
     },
     "next": {
-      "rootDir": "./"
+      "rootDir": "./src/app"
     }
-  },
-  "parserOptions": {
-    "ecmaVersion": 2021,
-    "sourceType": "module",
-    "ecmaFeatures": {
-      "jsx": true
-    }
-  },
-  "env": {
-    "browser": true,
-    "es2021": true,
-    "node": true
   }
 }
